<resources>
    <string name="app_name">Adatb</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_credentials">Remember credentials</string>
    <string name="loading_news">Loading news...</string>
    <string name="news">News</string>
    <string name="ok">Ok</string>
    <string name="title">Title</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place">place</string>
    <string name="demonstrator">demonstrator</string>
    <string name="exercise_type">exercise type</string>
    <string name="grade">grade</string>
</resources>
